2002-05-28  Mike Kestner <mkestner@speakeasy.net>

	* makefile : add separate targets for native and platform
	  independent products per request from debian packager 
	  Alp Toker <alp@atoker.com>

2002-05-26  Mike Kestner <mkestner@speakeasy.net>

	* generator/Parser.cs : Implement Alias node parsing.
	* generator/SymbolTable.cs : resolve aliased types.

2002-05-23  Mike Kestner <mkestner@speakeasy.net>

	* generator/BoxedGen.cs : Update for Static SymbolTable
	* generator/CallbackGen.cs : Use GenBase and Parameters classes
	* generator/CodeGenerator.cs : Update for Static SymbolTable
	* generator/Ctor.cs : code from StructBase using Parameters class
	* generator/EnumGen.cs : Use GenBase
	* generator/GenBase.cs : Abstract Stream Writer creation, stream
	  boilerplate, and common *Name properties
	* generator/IGeneratable.cs : Update for Static SymbolTable
	* generator/InterfaceGen.cs : Use GenBase
	* generator/Method.cs : code from StructBase using Parameters class
	* generator/ObjectGen.cs : Major refactoring. Use GenBase. Build
	  tables of Member generatables at construct time to facilitate 
	  future name collision resolution logic.
	* generator/Parameters.cs : new generatable to abstract duplicated
	  parameter parsing logic.
	* generator/Parser.cs : Update for Static SymbolTable
	* generator/Property.cs : code from ObjectGen 
	* generator/Signal.cs : code from ObjectGen 
	* generator/SignalHandler.cs : Update for Static SymbolTable
	* generator/StructBase.cs : Update for Static SymbolTable
	* generator/StructGen.cs : Update for Static SymbolTable
	* generator/SymbolTable.cs : Make all methods and private members
	  static.  There is no reason to ever have multiple tables.
	
2002-05-13  Joe Shaw  <joe@assbarn.com>

	* sample/Makefile.in: Use -L compiler flags and specify all of the
	assemblies to link against.

2002-05-13  Joe Shaw  <joe@assbarn.com>

	* gtk/Makefile.in: Add the System.Drawing assembly to the compiler
	command-line.
