@@ -1,3 +1,8 @@
+2002-05-29  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/CallbackGen.cs : Fix build breaker from refactoring.
+	* sample/Makefile.in : Build the menu sample on linux.
+
 2002-05-28  Mike Kestner <mkestner@speakeasy.net>
 
 	* makefile : add separate targets for native and platform
